Edit main text color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -70,7 +70,7 @@ https://github.com/orioncactus/pretendard
 :root{
   --bg-main: #111111;
   --bg-sub: #333333;
-  --tx-main: #F5F5F5;
+  --tx-main: #eaeaea;
   --tx-sub: #B7BAB6;
   --tx-sub-dark: #A6A5A4;
   --tx-accent: #6667ab;
