Post 주니어 개발자의 포지션 변경과 함께한 2022년 이직기

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,7 +71,7 @@ https://github.com/orioncactus/pretendard
   --bg-main: #111111;
   --bg-sub: #333333;
   --tx-main: #eaeaea;
-  --tx-sub: #B7BAB6;
+  --tx-sub: #bdc1c9;
   --tx-sub-dark: #A6A5A4;
   --tx-accent: #6667ab;
   --tx-accent-light: #B2B3D5;
