--- a/app/style/globals.css
+++ b/app/style/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -9,63 +9,63 @@
 
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
- 
+
     --popover: 0 0% 100%;
     --popover-foreground: 222.2 84% 4.9%;
- 
+
     --primary: 222.2 47.4% 11.2%;
     --primary-foreground: 210 40% 98%;
- 
+
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
- 
+
     --muted: 210 40% 96.1%;
     --muted-foreground: 215.4 16.3% 46.9%;
- 
+
     --accent: 210 40% 96.1%;
     --accent-foreground: 222.2 47.4% 11.2%;
- 
+
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 210 40% 98%;
 
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
- 
+
     --radius: 0.5rem;
   }
- 
+
   .dark {
     --background: 222.2 84% 4.9%;
     --foreground: 210 40% 98%;
- 
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
- 
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
- 
+
     --primary: 210 40% 98%;
     --primary-foreground: 222.2 47.4% 11.2%;
- 
+
     --secondary: 217.2 32.6% 17.5%;
     --secondary-foreground: 210 40% 98%;
- 
+
     --muted: 217.2 32.6% 17.5%;
     --muted-foreground: 215 20.2% 65.1%;
- 
+
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
- 
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
- 
+
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+
 @layer base {
   * {
     @apply border-border;
@@ -75,6 +75,34 @@
   }
 }
 
-.prose{
+.prose {
   max-width: none;
+}
+
+.rehype-code-title {
+  @apply text-slate-900 dark:text-slate-200;
+  @apply bg-white dark:bg-zinc-900;
+  @apply border border-solid border-sky-800 dark:border-sky-100;
+  border-top-left-radius: 7px;
+  border-top-right-radius: 7px;
+  padding: 5px 16px;
+  font-weight: 700;
+  margin-top: 8px;
+  font-size: 14px;
+  margin-bottom: -35px;
+}
+
+.prose span code {
+  background-color: var(--foreground) !important;
+  color: var(--background) !important;
+}
+
+.prose figure :where(code):not(:where([class~="not-prose"] *)),
+.prose figure :where(code):not(:where([class~="not-prose"] *)) {
+  color: var(--foreground);
+}
+
+.prose figure :where(code):not(:where([class~="not-prose"] *))::before,
+.prose figure :where(code):not(:where([class~="not-prose"] *))::after {
+  content: "";
 }
