post 여러 디자인시스템을 살펴보기

--- a/app/style/globals.css
+++ b/app/style/globals.css
@@ -77,6 +77,11 @@
 
 .prose {
   max-width: none;
+  @apply font-light;
+}
+
+.prose-slate {
+  @apply text-slate-800 dark:text-slate-200;
 }
 
 .rehype-code-title {
