post 오픈소스 MDN Web Docs에 기여하는 방법

--- a/app/style/globals.css
+++ b/app/style/globals.css
@@ -111,3 +111,8 @@
 .prose figure :where(code):not(:where([class~="not-prose"] *))::after {
   content: "";
 }
+
+.prose ul {
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
